# Changelog
#-# Current Biggest Update - Sep 13, 2022

> - Upgrade / Fix
+ - Adding Something
x - Deleting Something

Sep 8, 2022 -
    + Changelog
    + Mathway

Sep 11, 2022 -
    + Drift Boss
    +  Run 3

Sep 13, 2022
    + Super Mario Bros 2 [NES]
    + Super Mario Bros 3 [NES]
    + NBA Jam Tournament Edition [SNES]
    + Mega Man X [SNES]
    + The Legend Of Zelda [NES]
    + 3kh0 [Unblocked From Go Gaurdian]

Sep 14, 2022 - 
    + Paper Io 2
    + Wordle

Sep 17, 2022 - 
    + Flappybird [buggy]

Sep 19, 2022 - 
    + Retrobowl
    > Pixel Shooter Icon
    + Basketball Stars
    + Geometry Dash
    + Getaway Shootout

Sep 20, 2022 - 
    + Zombs Royale [Unblocked From Go Gaurdian]

Sep 21, 2022 - 
    > Zombs Royale Link
    + Subway Surfers