@@ -59,7 +59,7 @@
                                         <a href="https://spew45.github.io/simple-games-assets/src/geometry/"><img src="./img/geometry-dash.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="geometry-dash" target="_blank"></a>
                                           <a href="https://spew45.github.io/simple-games-assets/src/getaway-shootout/"><img src="./img/getaway-shootout.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="getaway-shootout" target="_blank"></a>
                                             <a href="./projects/zombs-royale.html"><img src="./img/zombs-royale.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="zombs-royale" target="_blank"></a>
-                                              <a href="./projects/subway-surfers.html"><img src="./img/subway-surfers-bali.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="subway-surfers" target="_blank"></a>
+                                              <a href="https://yell0wsuit.page/html5-games/games/subway-surfers/"><img src="./img/subway-surfers-bali.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="subway-surfers" target="_blank"></a>
                                                 <a href="./projects/kirka-io.html"><img src="./img/kirka-io.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="kirka-io" target="_blank"></a>
                                                   <a href="./projects/iframe.html"><img src="./img/white_square_unused.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="iframe-prompt" target="_blank"></a>
 </body>
