@@ -1,23 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Playing Subway Surfers</title>
-        <style type="text/css">
-            body, html
-            {
-                margin: 0; padding: 0; height: 100%; overflow: hidden;
-            }
-
-            #content
-            {
-                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
-            }
-        </style>
-    </head>
-    <body>
-        <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://extrememath.net/gamefiles/subwaysurfers/"></iframe>
-        </div>
-    </body>
-</html>
