@@ -1,0 +1,41 @@
+  <!--Classes-->
+  <title>Selecting Game</title>
+
+<body style="background-color: #262626;">
+  <style>
+    .h3text1 {
+      padding-top: 3%;
+      color: #000;
+    }
+
+    .game1 {
+      padding-left: 0.60%;
+    }
+    .margin1 {
+      margin-top: 1.85%;
+    }
+  </style>
+</body>
+
+<!--Title-->
+
+<body>
+  <div class="h3text1">
+    <b>
+      <h3 style="font-family: arial; text-align: center; font-size: 35px; color: #fff;">Popular Games</h3>
+    </b>
+  </div>
+</body>
+
+<!--Main Text-->
+
+<body>
+    <p align="center"><a href="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/mariokart.gba"><img src="./img/MKSC.jpg" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="mksc" target="_blank"></a>
+      <a href="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/lsw.gba"><img src="./img/legostarwars.jpg" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="star_wars_gba" target="_blank"></a>
+        <a href="./projects/eggy-car.html"><img src="./img/eggy-car.png" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" target="_blank"></a>
+          <a href="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/harry_potter_and_the_chamber_of_secrets.gba"><img src="./img/harrypotter1.jpg" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="harry_potter_1_gba" target="_blank"></a>
+            <a href="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/harry_potter_and_the_chamber_of_secrets.gba"><img src="./img/harrypotter2.jpg" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="harry_potter_2_gba" target="_blank"></a>
+              <a href="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/namco_museum.gba"><img src="./img/namco_museum.jpg" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="namco_museum" target="_blank"></a>
+                <a href="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/thps2.gba"><img src="./img/thps2.jpg" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="thps2" target="_blank"></a>
+                  <a href="https://spew45.github.io/webretro/index.html?core=autodetect&rom=https://spew45.github.io/GBA-Emu/Binaries/simpsons.gba"><img src="./img/simpsons_roadrage.jpg" width="200" height="200" hspace="8" vspace="8" style="border-radius: 25px;" alt="simpsons_road_rage" target="_blank"></a>
+</body>
